# IT-Cert-Sim

./: .gitignore  DATABASE-SETUP-COMPLETE.md  FINAL-STATUS.md  INSTALL.md  PRACTICE_MODE_IMPLEMENTATION.md  QUICK-START.md  README.md  SETUP.md  TEST-DATA-CREATED.md  USER-FLOW-COMPLETE.md  package.json  start-desktop.bat  start-desktop.ps1
backend/: .env.example  TESTING.md  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/scripts/: aplus-questions.json  create-exams.ts  make-admin.ts  network-questions.json  security-questions.json
backend/src/: index.ts
backend/src/lib/: auditLog.ts  cloudinary.ts
backend/src/middleware/: auth.ts
backend/src/routes/: admin.ts  auth.ts  certifications.ts  exams.ts  questions.ts
backend/tests/: README.md  admin.test.ts
desktop/: .env.example  package.json
desktop/prisma/: schema.prisma
desktop/src/: index.ts  seed.ts
desktop/src/routes/: admin.ts  certifications.ts  exams.ts  questions.ts
frontend/: package.json  tailwind.config.ts
frontend/src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/forbidden/: page.tsx
frontend/src/components/: ErrorPage.tsx  Navbar.tsx  ProtectedRoute.tsx  Skeleton.tsx  ThemeProvider.tsx  ToastProvider.tsx
frontend/src/lib/: api.ts  store.ts  useApiError.ts
frontend/src/types/: exam.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+26 files in other folders)
