[package]
name = "it-cert-simulator"
version = "0.1.0"
description = "IT Certification Exam Simulator Desktop App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.37"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
